fix(footer): fix footer column overflow

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -203,3 +203,8 @@
     }
   }
 }
+
+.footer-col {
+  max-width: calc(100% - (30px / 2));
+  overflow: hidden;
+}
